[package]
name = "factorio-bp-helper"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ComputerDruid/factorio-bp-helper"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.42", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
zlib-rs = "0.5.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
